# Timetable-genius

./: .gitignore  README.md  RUN.bat  SQL-ERD.tldr  Test_sql_final.sql  genai_timetable_readme.md  mit_license.md  pyproject.toml  requirements.txt  test.ipynb  update_db.py
Website/: .env.example  Final_test.py  app.py  pyproject.toml
Website/TESTING/: Generative_AI.py  Genrative.txt  Output.json  Random-Generation.py  Test.py  Timetable_Data_final_output.json  timetable.json  timetable_genius.json
Website/static/: script.js  style.css
Website/templates/: Sign-in.html  Sign-up.html  dashboard.html  forgot-password.html  landing.html  reset-password.html
