[project]
name = "website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-core>=2.9.0",
    "flask-cors>=6.0.2",
    "google-genai>=1.70.0",
    "mysql-connector>=2.2.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pymongo>=4.16.0",
    "werkzeug>=3.1.8",
]
